# customers_api

./: .env.example  pyproject.toml  railway.yaml
app/: __init__.py
app/controllers/: customers_route.py
app/models/: customers.py
app/templates/: home.html  login.html  register.html
