[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ku2h7 <kukuhsyaifudin7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
mysql-connector-python = "^8.3.0"
bcrypt = "^4.1.2"
flask-jwt-extended = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
